--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,45 +1,76 @@
 pipeline {
-    agent any
+  agent any
 
-    stages {
-        stage('Clone Repo') {
-            steps {
-                echo '✅ Cloning repository...'
-                checkout scm
-            }
-        }
-        stage('Install Requirements') {
-            steps {
-                echo '📦 Installing dependencies...'
-                sh 'python3 --version'  
-                sh 'pip3 install -r requirements.txt'  
-            }
-        }
-        stage('Run Django Checks') {
-            steps {
-                echo '🔍 Checking Django project...'
-                sh 'python3 manage.py check'
-            }
-        }
-        stage('Run Migrations') {
-            steps {
-                echo '📂 Running migrations...'
-                sh 'python3 manage.py migrate'
-            }
-        }
-        stage('Run Tests') {
-            steps {
-                echo '🧪 Running tests...'
-                sh 'python3 manage.py test'
-            }
-        }
+  environment {
+    // Example: Pull from .env or Jenkins Credentials
+    DJANGO_SECRET_KEY = credentials('django-secret-key')
+    REACT_APP_WEATHER_API_KEY = credentials('react-weather-api')
+  }
+
+  stages {
+    stage('Checkout') {
+      steps {
+        git branch: 'main', url: 'https://github.com/BS-PM-2025/BS-PM-2025-TEAM27.git'
+      }
     }
-    post {
-        success {
-            echo '🎉 Build and tests succeeded!'
+
+    stage('Backend Setup') {
+      steps {
+        dir('backend') {
+          sh '''
+            python -m venv venv
+            . venv/bin/activate
+            pip install -r requirements.txt
+          '''
         }
-        failure {
-            echo '❌ Build failed!'
-        }
+      }
     }
+
+    stage('Frontend Setup') {
+      steps {
+        dir('frontend') {
+          sh '''
+            npm install
+          '''
+        }
+      }
+    }
+
+    stage('Run Backend Tests') {
+      steps {
+        dir('backend') {
+          sh '''
+            . venv/bin/activate
+            python manage.py test
+          '''
+        }
+      }
+    }
+
+    stage('Build Frontend') {
+      steps {
+        dir('frontend') {
+          sh 'npm run build'
+        }
+      }
+    }
+
+    stage('Deploy or Archive') {
+      steps {
+        archiveArtifacts artifacts: '**/build/**', allowEmptyArchive: true
+      }
+    }
+  }
+
+  post {
+    always {
+      echo 'Cleaning up...'
+    }
+    success {
+      echo 'Build and tests passed!'
+    }
+    failure {
+      echo 'Something failed. Check logs.'
+    }
+  }
 }
