--- a/JenkinsFile
+++ b/JenkinsFile
@@ -23,7 +23,7 @@ pipeline {
     stage('Backend Setup') {
       steps {
         sh '''
-          python3 -m venv venv
+          /usr/bin/python3.11 -m venv venv
           . venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
