--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,7 @@ pipeline {
         echo '🐍 Setting up Python virtual environment...'
         sh '''
           python3 -m venv venv
-          . venv/bin/activate
+          source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
         '''
@@ -31,7 +31,7 @@ pipeline {
       steps {
         echo '🧪 Running Django unit tests...'
         sh '''
-          . venv/bin/activate
+          source venv/bin/activate
           python manage.py test
         '''
       }
