--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ pipeline {
     stage('Backend Setup') {
       steps {
         echo '🐍 Setting up Python virtual environment...'
-        sh '''
+        sh '''#!/bin/bash
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip
@@ -30,7 +30,7 @@ pipeline {
     stage('Run Backend Tests') {
       steps {
         echo '🧪 Running Django unit tests...'
-        sh '''
+        sh '''#!/bin/bash
           source venv/bin/activate
           python manage.py test
         '''
