--- a/JenkinsFile
+++ b/JenkinsFile
@@ -38,7 +38,7 @@ pipeline {
       steps {
         dir('frontend') {
           echo '📦 Installing frontend dependencies...'
-          sh 'npm install'
+          sh '/usr/bin/npm install'
         }
       }
     }
@@ -47,7 +47,7 @@ pipeline {
       steps {
         dir('frontend') {
           echo '🛠️ Building frontend...'
-          sh 'npm run build'
+          sh '/usr/bin/npm run build'
         }
       }
     }
