--- a/JenkinsFile
+++ b/JenkinsFile
@@ -14,24 +14,16 @@ pipeline {
       }
     }
 
-    stage('Inject .env File') {
+    stage('Check .env') {
       steps {
-        echo '🛡️ Injecting secrets from Jenkins (not from Git)...'
-        // 👇 This reads the secret from Jenkins credentials
-        withCredentials([string(credentialsId: 'openai-api-key', variable: 'OPENAI_API_KEY')]) {
-          writeFile file: '.env', text: "OPENAI_API_KEY=${OPENAI_API_KEY}\n"
-        }
-      }
-    }
-
-    stage('Check Workspace') {
-      steps {
-        sh 'ls -la'
+        echo '📂 Verifying .env file presence...'
+        sh 'ls -la .env || echo ".env file is missing!"'
       }
     }
 
     stage('Install Python Dependencies') {
       steps {
+        echo '🐍 Installing backend dependencies...'
         sh '''
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
@@ -41,12 +33,14 @@ pipeline {
 
     stage('Run Backend Tests') {
       steps {
+        echo '🧪 Running Django unit tests...'
         sh 'python3 manage.py test accounts --settings=backend.settings'
       }
     }
 
     stage('Setup Node.js Locally') {
       steps {
+        echo '⬇️ Downloading Node.js...'
         sh '''
           rm -rf ${NODE_DIR} node-${NODE_VERSION}-linux-x64
           curl -O https://nodejs.org/dist/${NODE_VERSION}/node-${NODE_VERSION}-linux-x64.tar.xz
@@ -59,6 +53,7 @@ pipeline {
     stage('Install Frontend Dependencies') {
       steps {
         dir('frontend') {
+          echo '📦 Installing frontend dependencies...'
           sh 'npm install'
         }
       }
@@ -67,6 +62,7 @@ pipeline {
     stage('Build Frontend') {
       steps {
         dir('frontend') {
+          echo '🔧 Building frontend...'
           sh 'CI=false npm run build'
         }
       }
@@ -74,6 +70,7 @@ pipeline {
 
     stage('Archive Frontend Build') {
       steps {
+        echo '🗃️ Archiving frontend build...'
         archiveArtifacts artifacts: 'frontend/build/**', allowEmptyArchive: true
       }
     }
@@ -84,10 +81,10 @@ pipeline {
       echo '✅ Build successful!'
     }
     failure {
-      echo '❌ Build failed.'
+      echo '❌ Build failed. Check the logs.'
     }
     always {
-      echo '🧹 Pipeline done.'
+      echo '🧹 Pipeline finished.'
     }
   }
 }
