--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,7 +24,6 @@ pipeline {
       steps {
         echo "🐍 Installing backend dependencies..."
         sh '''
-          cd BS-PM-2025-TEAM27
           python3 -m pip install --upgrade pip
           python3 -m pip install -r requirements.txt
         '''
@@ -35,7 +34,6 @@ pipeline {
       steps {
         echo "🧪 Running Django unit tests..."
         sh '''
-          cd BS-PM-2025-TEAM27
           python3 manage.py test accounts --settings=backend.settings
         '''
       }
@@ -45,7 +43,7 @@ pipeline {
       steps {
         echo "⚙️ Installing Node.js..."
         sh '''
-          cd BS-PM-2025-TEAM27/frontend
+          cd frontend
           curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
           sudo apt-get install -y nodejs
         '''
@@ -56,7 +54,7 @@ pipeline {
       steps {
         echo "📦 Installing frontend dependencies..."
         sh '''
-          cd BS-PM-2025-TEAM27/frontend
+          cd frontend
           npm install
         '''
       }
@@ -66,7 +64,7 @@ pipeline {
       steps {
         echo "🏗️ Building frontend..."
         sh '''
-          cd BS-PM-2025-TEAM27/frontend
+          cd frontend
           npm run build
         '''
       }
@@ -74,7 +72,7 @@ pipeline {
 
     stage('Archive Frontend Build') {
       steps {
-        archiveArtifacts artifacts: 'BS-PM-2025-TEAM27/frontend/dist/**', fingerprint: true
+        archiveArtifacts artifacts: 'frontend/dist/**', fingerprint: true
       }
     }
   }
